fixed buttons, added different style and JavaScript

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,6 +1,5 @@
 body {
     background-color: black;
-    
 }
 
 ul {
@@ -44,5 +43,5 @@ li:hover {
     display: flex;
     justify-content: center;
     padding-bottom: 50px;
-    color: blue;
+    color: black;
 }
